--- a/tags.html
+++ b/tags.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simply Recipes || Starter</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <!-- normalize -->
-    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="normalize.css" />
     <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
     <!-- main css -->
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     
@@ -23,7 +23,7 @@
       <div class="nav-center">
       <div class="nav-header">
       <a href="index.html" class="nav-logo">
-        <img src="./assets/logo.svg" class="nav-logo-image">
+        <img src="logo.svg" class="nav-logo-image">
     </a>
     <button class="nav-btn btn">
       <i class="fas fa-align-justify"></i>
@@ -78,7 +78,7 @@
         Built by <a href="https://www.linkedin.com/in/preety-rani-757332203/">By preety</a>
         </p>
     </footer>
-    <script type="text/javascript" src="./js/app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
    
     
   </body>
