--- a/tag-template.html
+++ b/tag-template.html
@@ -83,7 +83,7 @@
         <span class="footer-logo">Simply Recipes
           
         </span>
-        Built by <a href="https://www.linkedin.com/in/preety-rani-757332203/">By preety</a>
+        Built by <a href="https://www.linkedin.com/in/preety-rani-757332203/"> Preety</a>
         </p>
     </footer>
     <script type="text/javascript" src="app.js"></script>
